--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.0",
         "beyondcode/laravel-websockets": "^1.14",
         "doctrine/dbal": "^3.8",
         "guzzlehttp/guzzle": "^7.2",
@@ -14,7 +15,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
         "league/flysystem-ftp": "^3.0",
-        "league/flysystem-sftp": "^3.28"
+        "league/flysystem-sftp": "^3.28",
+        "spatie/laravel-pdf": "^1.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
