--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.3",
+        "echarts": "^5.5.1",
+        "jquery": "^3.7.1",
         "laravel-echo": "^1.16.1",
         "pusher-js": "^8.4.0-rc2"
     }
